--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "FRIDAY",
-  "description": "Userbot created by a @Mariodevs and join https://t.me/fridaySupportOfficial for any problems or support",
-  "logo": "https://telegra.ph/file/c3ba2e9b965f624936358.png",
+  "name": "WOLF",
+  "description": "Userbot created by a @Boy_is_Back and join https://t.me/Wolfuserbot_Support for any problems or support",
+  "logo": "https://telegra.ph/file/ba9f45df35ded904fca75.jpg",
     "keywords": [
     "telegram",
     "userbot",
@@ -9,7 +9,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/STARKGANG/FridayUserbot/",
+  "repository": "https://github.com/indianSammy07/WolfUserbot/",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
@@ -90,7 +90,7 @@
     },
     "SUDO_USERS": {
       "description": "Makes your acc and bot stable",
-      "value": "813878981",
+      "value": "1244074215",
       "required": false
     },
     "CHROME_BIN": {
